公共模板完成（顶部搜索、底部导航）

--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
     <title>品优购首页</title>
 </head>
 <body>
-    
+    <!-- 公共模板：顶部搜索 -->
+    <header class="pyg-header">
+        <div class="mui-input-row mui-search">
+            <input type="search" class="mui-input-clear" placeholder="">
+        </div>
+    </header>
+    <div class="pyg-main"></div>
+    <!-- 公共模板：底部导航 -->
+    <footer class="pyg-footer">
+        <a href="javascript:;">
+            <span class="fa fa-home"></span>
+            <div>首页</div>
+        </a>
+        <a href="javascript:;">
+            <span class="fa fa-list-ul "></span>
+            <div>分类</div>
+        </a>
+        <a href="javascript:;">
+            <span class="fa fa-shopping-cart "></span>
+            <div>购物车</div>
+        </a>
+        <a href="javascript:;">
+            <span class="fa fa-user-circle"></span>
+            <div>我的</div>
+        </a>
+    </footer>
 </body>
 <script src="https://cdn.bootcss.com/mui/3.7.1/js/mui.min.js"></script>
 <script src="https://cdn.bootcss.com/zepto/1.0rc1/zepto.min.js"></script>
