分类页面左侧导航完成

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     </div>
     <!-- 公共模板：底部导航 -->
     <footer class="pyg-footer">
-        <a href="javascript:;">
+        <a href="index.html">
             <span class="fa fa-home"></span>
             <div>首页</div>
         </a>
-        <a href="javascript:;">
+        <a href="pages/category.html">
             <span class="fa fa-list-ul "></span>
             <div>分类</div>
         </a>
