--- a/pages/category.html
+++ b/pages/category.html
@@ -62,6 +62,7 @@
 </script>
 <!-- 商品分类列表右侧导航模板 -->
 <script type="text/template" id="rightTemp">
+    <div>
     {{each data value index}}
     <div class="goodstitle">{{value.cat_name}}</div>
             <div class="goodslist">
@@ -77,10 +78,11 @@
                 </ul>
             </div>
     {{/each}}
+</div>
 </script>
 <script src="https://cdn.bootcss.com/mui/3.7.1/js/mui.min.js"></script>
 <script src="https://cdn.bootcss.com/zepto/1.0rc1/zepto.min.js"></script>
-<script src="https://cdn.bootcss.com/iScroll/5.2.0/iscroll.min.js"></script>
+<script src="/lib/iscroll/iscroll.js"></script>
 <script src="/lib/arttemplate/template-web.js"></script>
 <script src="/js/category.js"></script>
 
