--- a/pages/category.html
+++ b/pages/category.html
@@ -81,9 +81,10 @@
 </div>
 </script>
 <script src="https://cdn.bootcss.com/mui/3.7.1/js/mui.min.js"></script>
-<script src="https://cdn.bootcss.com/zepto/1.0rc1/zepto.min.js"></script>
+<script src="/lib/zepto/zepto.js"></script>
 <script src="/lib/iscroll/iscroll.js"></script>
 <script src="/lib/arttemplate/template-web.js"></script>
+<script src="/js/common.js"></script>
 <script src="/js/category.js"></script>
 
 </html>
