--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
     {{/each}}
 </script>
 <script src="https://cdn.bootcss.com/mui/3.7.1/js/mui.min.js"></script>
-<script src="https://cdn.bootcss.com/zepto/1.0rc1/zepto.min.js"></script>
+<script src="lib/zepto/zepto.js"></script>
 <script src="https://cdn.bootcss.com/iScroll/5.2.0/iscroll.min.js"></script>
 <script src="/lib/arttemplate/template-web.js"></script>
+<script src="/js/common.js"></script>
 <script src="/js/index.js"></script>
 
 </html>
