商品列表页面动态渲染

--- a/pages/category.html
+++ b/pages/category.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/mui/3.7.1/css/mui.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
                 <ul>
                     {{each value.children value2 index2}}
                     <li>
-                        <a href="javascript:;">
+                        <a href="goods-list.html?cid={{value2.cat_id}}">
                             <img src="http://api.pyg.ak48.xyz/{{value2.cat_icon}}" alt="">
                             <div>{{value2.cat_name}}</div>
                         </a>
