--- a/pages/goods-list.html
+++ b/pages/goods-list.html
@@ -22,107 +22,10 @@
 
     <!-- 商品列表内容块 -->
     <div class="goods-container">
-        <ul class="goods_list">
-            <li>
-                <div class="goodsLeft">
-                    <img src="http://image4.suning.cn/uimg/b2c/newcatentries/0070086350-000000000649279060_1_400x400.jpg"
-                        alt="">
-                </div>
-                <div class="goodsRight">
-                    <div class="goodsName mui-ellipsis">
-                        华为（HUAWEI）随行随身WIFI2移动电信联通三网通4G无线路由器车载mifi上网宝 E5577国内4G全网通
-                    </div>
-                    <div class="goodsPrice">
-                        ￥499
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="goodsLeft">
-                    <img src="http://image4.suning.cn/uimg/b2c/newcatentries/0070086350-000000000649279060_1_400x400.jpg"
-                        alt="">
-                </div>
-                <div class="goodsRight">
-                    <div class="goodsName mui-ellipsis">
-                        华为（HUAWEI）随行随身WIFI2移动电信联通三网通4G无线路由器车载mifi上网宝 E5577国内4G全网通
-                    </div>
-                    <div class="goodsPrice">
-                        ￥499
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="goodsLeft">
-                    <img src="http://image4.suning.cn/uimg/b2c/newcatentries/0070086350-000000000649279060_1_400x400.jpg"
-                        alt="">
-                </div>
-                <div class="goodsRight">
-                    <div class="goodsName mui-ellipsis">
-                        华为（HUAWEI）随行随身WIFI2移动电信联通三网通4G无线路由器车载mifi上网宝 E5577国内4G全网通
-                    </div>
-                    <div class="goodsPrice">
-                        ￥499
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="goodsLeft">
-                    <img src="http://image4.suning.cn/uimg/b2c/newcatentries/0070086350-000000000649279060_1_400x400.jpg"
-                        alt="">
-                </div>
-                <div class="goodsRight">
-                    <div class="goodsName mui-ellipsis">
-                        华为（HUAWEI）随行随身WIFI2移动电信联通三网通4G无线路由器车载mifi上网宝 E5577国内4G全网通
-                    </div>
-                    <div class="goodsPrice">
-                        ￥499
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="goodsLeft">
-                    <img src="http://image4.suning.cn/uimg/b2c/newcatentries/0070086350-000000000649279060_1_400x400.jpg"
-                        alt="">
-                </div>
-                <div class="goodsRight">
-                    <div class="goodsName mui-ellipsis">
-                        华为（HUAWEI）随行随身WIFI2移动电信联通三网通4G无线路由器车载mifi上网宝 E5577国内4G全网通
-                    </div>
-                    <div class="goodsPrice">
-                        ￥499
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="goodsLeft">
-                    <img src="http://image4.suning.cn/uimg/b2c/newcatentries/0070086350-000000000649279060_1_400x400.jpg"
-                        alt="">
-                </div>
-                <div class="goodsRight">
-                    <div class="goodsName mui-ellipsis">
-                        华为（HUAWEI）随行随身WIFI2移动电信联通三网通4G无线路由器车载mifi上网宝 E5577国内4G全网通
-                    </div>
-                    <div class="goodsPrice">
-                        ￥499
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="goodsLeft">
-                    <img src="http://image4.suning.cn/uimg/b2c/newcatentries/0070086350-000000000649279060_1_400x400.jpg"
-                        alt="">
-                </div>
-                <div class="goodsRight">
-                    <div class="goodsName mui-ellipsis">
-                        华为（HUAWEI）随行随身WIFI2移动电信联通三网通4G无线路由器车载mifi上网宝 E5577国内4G全网通
-                    </div>
-                    <div class="goodsPrice">
-                        ￥499
-                    </div>
-                </div>
-            </li>
-
-        </ul>
+        <div>
+            <ul class="goods_list">
+            </ul>
+        </div>
     </div>
 
     <!-- 公共模板：底部导航 -->
@@ -149,14 +52,17 @@
 <script type="text/template" id="goodsListTemp">
     {{each data value index}}
         <li>
-            <div class="goodsLeft">
-                <img src="{{value.goods_small_logo}}" alt="">
-            </div>
-            <div class="goodsRight">
-                <div class="goodsName mui-ellipsis">{{value.goods_name}}</div>
-                <div class="goodsPrice">￥{{value.goods_price}}</div>
-            </div>
+            <a href="goods_detail.html?goods_id={{value.goods_id}}">
+                <div class="goodsLeft">
+                    <img src="{{value.goods_small_logo}}" alt="">
+                </div>
+                <div class="goodsRight">
+                    <div class="goodsName mui-ellipsis">{{value.goods_name}}</div>
+                    <div class="goodsPrice">￥{{value.goods_price}}</div>
+                </div>
+            </a>
         </li>
+    
     {{/each}}
 </script>
 <script src="https://cdn.bootcss.com/mui/3.7.1/js/mui.min.js"></script>
