解决MUI中a标签不能跳转的问题

--- a/pages/goods-list.html
+++ b/pages/goods-list.html
@@ -52,7 +52,7 @@
 <script type="text/template" id="goodsListTemp">
     {{each data value index}}
         <li>
-            <a href="goods_detail.html?goods_id={{value.goods_id}}">
+            <a href="goods-detail.html?goods_id={{value.goods_id}}">
                 <div class="goodsLeft">
                     <img src="{{value.goods_small_logo}}" alt="">
                 </div>
