--- a/pages/goods-detail.html
+++ b/pages/goods-detail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.bootcss.com/mui/3.7.1/css/mui.min.css" rel="stylesheet">
+    <link href="/lib/mui/css/mui.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/goods-detail.css">
@@ -26,7 +26,20 @@
 
     <!-- 公共模板：底部导航 -->
     <footer class="pyg-footer">
-           
+        <a href="javascript:;">
+            <span class="fa fa-weixin"></span>
+            <div>微信</div>
+        </a>
+        <a href="javascript:;">
+            <span class="fa fa-phone"></span>
+            <div>客服</div>
+        </a>
+        <a href="javascript:;">
+            立即购买
+        </a>
+        <a href="javascript:;">
+            加入购物车
+        </a>
     </footer>
 </body>
 <!-- 商品详情页模板 -->
@@ -79,21 +92,40 @@
        </ul>
     <!-- 商品参数 -->
     <!-- tab栏 -->
-    <div id="segmentedControl" class="mui-segmented-control mui-segmented-control-primary">
-        <a class="mui-control-item mui-active" href="#item1">图文详情</a>
-        <a class="mui-control-item" href="#item2">规格参数</a>
-    </div>
-    <div>
-        <div id="item1" class="mui-control-content mui-active">
-            1
+    <div class="detail-tab">
+        <!-- 标题 -->
+        <div class="pyg_tab_title mui-segmented-control">
+            <a class="mui-control-item mui-active" href="#item1">图文详情</a>
+            <a class="mui-control-item" href="#item2">规格参数</a>
         </div>
-        <div id="item2" class="mui-control-content">
-            2
+        <!-- 标题 -->
+        <!-- 内容 -->
+        <div class="tab-content">
+            <div id="item1" class="mui-control-content mui-active">
+                {{@goods_introduce}}
+            </div>
+            <div id="item2" class="mui-control-content">
+                    <ul>
+                            {{each  attrs value index}}
+                            <li>
+                                 <div class="item_title">{{value.attr_name.split('-')[0]}}</div>
+                                 <div class="item_content">
+                                      <span>{{value.attr_name.split('-')[1]}}</span>
+                                      <span>
+                                           {{value.attr_value}}
+                                      </span>
+                                 </div>
+                            </li>
+                            {{/each}}
+                       </ul>
+            </div>
         </div>
+        <!-- 内容 -->
     </div>
+
     <!-- tab栏 -->
 </script>
-<script src="https://cdn.bootcss.com/mui/3.7.1/js/mui.min.js"></script>
+<script src="/lib/mui/js/mui.min.js"></script>
 <script src="/lib/zepto/zepto.js"></script>
 <script src="/lib/iscroll/iscroll.js"></script>
 <script src="/lib/arttemplate/template-web.js"></script>
