注册页面完成

--- a/pages/register.html
+++ b/pages/register.html
@@ -24,11 +24,12 @@
             
             <div class="mui-input-row">
                 <label>手机号</label>
-                <input type="text" name="mobile" class="mui-input-clear" placeholder="请输入手机号码">
+                <input type="text" name="mobile" value="13413513613" class="mui-input-clear" placeholder="请输入手机号码">
             </div>
-            <div class="mui-input-row">
+            <div class="mui-input-row text-code">
                 <label>验证码</label>
-                <input type="text" name="code" class="mui-input-clear" placeholder="请输入验证码">
+                <input type="text" name="code" placeholder="请输入验证码">
+                <button type="button" class="btn-code mui-btn mui-btn-primary">获取验证码</button>
             </div>
             <div class="mui-input-row">
                 <label>邮箱</label>
@@ -44,11 +45,11 @@
             </div>
             <div class="mui-input-row mui-radio">
                     <label>女</label>
-                    <input name="gender" type="radio"  checked>
+                    <input name="gender" value="女" type="radio"  checked>
             </div>
             <div class="mui-input-row mui-radio">
                     <label>男</label>
-                    <input name="gender" type="radio">
+                    <input name="gender" value="男" type="radio">
             </div>
         </form>
         <div class="btn-tools">
