--- a/pages/category.html
+++ b/pages/category.html
@@ -70,7 +70,7 @@
                     {{each value.children value2 index2}}
                     <li>
                         <a href="goods-list.html?cid={{value2.cat_id}}">
-                            <img src="http://api.pyg.ak48.xyz/{{value2.cat_icon}}" alt="">
+                            <img src="{{baseURL}}{{value2.cat_icon}}" alt="">
                             <div>{{value2.cat_name}}</div>
                         </a>
                     </li>
