--- a/pages/goods-detail.html
+++ b/pages/goods-detail.html
@@ -37,7 +37,7 @@
         <a href="javascript:;">
             立即购买
         </a>
-        <a href="javascript:;">
+        <a href="javascript:;" id="btn-buycar">
             加入购物车
         </a>
     </footer>
