--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <span class="fa fa-list-ul "></span>
             <div>分类</div>
         </a>
-        <a href="javascript:;">
+        <a href="pages/cart.html">
             <span class="fa fa-shopping-cart "></span>
             <div>购物车</div>
         </a>
