--- a/pages/cart.html
+++ b/pages/cart.html
@@ -35,7 +35,6 @@
                     <div class="addr_right">
                          <div class="addr_name1">默认地址</div>
                          <div class="addr_name2">中国台湾钓鱼岛</div>
-
                     </div>
                </div>
           </div>
@@ -57,7 +56,7 @@
           <div class="order_row">
                <div class="order_title item_title">订单</div>
                <div class="order_content">
-                    <ul class="order_warp">
+                    <ul class="order_wrap">
 
 
                     </ul>
