--- a/pages/cart.html
+++ b/pages/cart.html
@@ -16,7 +16,7 @@
      <!-- 头部 -->
      <header class="mui-bar mui-bar-nav">
           <h1 class="mui-title">购物车</h1>
-          <button class="delete_btn mui-btn-outlined mui-action-back mui-btn mui-btn-blue mui-btn-nav mui-pull-left">删除</button>
+          <button class="delete_btn mui-btn-outlined mui-btn mui-btn-blue mui-btn-nav mui-pull-left">删除</button>
           <button class="edit_btn mui-btn-outlined mui-btn mui-btn-blue  mui-pull-right">编辑</button>
      </header>
      <!-- 内容 -->
@@ -66,7 +66,7 @@
 
      <!-- 公共模板：底部导航 -->
      <footer class="pyg-footer">
-          <a href="index.html">
+          <a href="/index.html">
                <span class="fa fa-home"></span>
                <div>首页</div>
           </a>
