更新底部导航条链接

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -70,15 +70,15 @@
                <span class="fa fa-home"></span>
                <div>首页</div>
           </a>
-          <a href="pages/category.html">
+          <a href="/pages/category.html">
                <span class="fa fa-list-ul "></span>
                <div>分类</div>
           </a>
-          <a href="javascript:;">
+          <a href="/pages/cart.html">
                <span class="fa fa-shopping-cart "></span>
                <div>购物车</div>
           </a>
-          <a href="javascript:;">
+          <a href="/pages/user.html">
                <span class="fa fa-user-circle"></span>
                <div>我的</div>
           </a>
