--- a/pages/goods-list.html
+++ b/pages/goods-list.html
@@ -30,23 +30,23 @@
 
     <!-- 公共模板：底部导航 -->
     <footer class="pyg-footer">
-        <a href="index.html">
-            <span class="fa fa-home"></span>
-            <div>首页</div>
+        <a href="/index.html">
+             <span class="fa fa-home"></span>
+             <div>首页</div>
         </a>
-        <a href="pages/category.html">
-            <span class="fa fa-list-ul "></span>
-            <div>分类</div>
+        <a href="/pages/category.html">
+             <span class="fa fa-list-ul "></span>
+             <div>分类</div>
         </a>
-        <a href="javascript:;">
-            <span class="fa fa-shopping-cart "></span>
-            <div>购物车</div>
+        <a href="/pages/cart.html">
+             <span class="fa fa-shopping-cart "></span>
+             <div>购物车</div>
         </a>
-        <a href="javascript:;">
-            <span class="fa fa-user-circle"></span>
-            <div>我的</div>
+        <a href="/pages/user.html">
+             <span class="fa fa-user-circle"></span>
+             <div>我的</div>
         </a>
-    </footer>
+   </footer>
 </body>
 <!-- 商品列表内容模板 -->
 <script type="text/template" id="goodsListTemp">
