--- a/pages/goods-detail.html
+++ b/pages/goods-detail.html
@@ -26,21 +26,23 @@
 
     <!-- 公共模板：底部导航 -->
     <footer class="pyg-footer">
-        <a href="javascript:;">
-            <span class="fa fa-weixin"></span>
-            <div>微信</div>
+        <a href="/index.html">
+             <span class="fa fa-home"></span>
+             <div>首页</div>
         </a>
-        <a href="javascript:;">
-            <span class="fa fa-phone"></span>
-            <div>客服</div>
+        <a href="/pages/category.html">
+             <span class="fa fa-list-ul "></span>
+             <div>分类</div>
         </a>
-        <a href="javascript:;">
-            立即购买
+        <a href="/pages/cart.html">
+             <span class="fa fa-shopping-cart "></span>
+             <div>购物车</div>
         </a>
-        <a href="javascript:;" id="btn-buycar">
-            加入购物车
+        <a href="/pages/user.html">
+             <span class="fa fa-user-circle"></span>
+             <div>我的</div>
         </a>
-    </footer>
+   </footer>
 </body>
 <!-- 商品详情页模板 -->
 <script type="text/template" id="detailTemp">
